# OpenCV-Document-Reader

./: .gitignore  README.md
OpenCV-Project/: CMakeLists.txt  CMakeSettings.json
OpenCV-Project/src/: CMakeLists.txt  config.h  main.cpp
